[workspace]
members = [
  "examples/*",
  "insim",
  "insim_core",
  "insim_lyt",
  "insim_macros",
  "insim_pth",
  "kitcar",
  "kitcar_macros",
  "outgauge",
  "outsim",
  "xtask",
]
exclude = ['examples/*']
# Only check / build main crates by default (check all with `--workspace`)
default-members = ["insim", "insim_core", "insim_macros", "insim_pth", "insim_lyt", "outgauge", "outsim", "kitcar"]
resolver = "2"

[workspace.package]
authors = ["Karl Southern <karl@theangryangel.co.uk>"]
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/theangryangel/insim.rs"
license = "MIT"
homepage = "https://github.com/theangryangel/insim.rs"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
unused_crate_dependencies = "warn"
unused_results = "deny"
missing_debug_implementations = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

# [workspace.lints.clippy]
# unwrap_used = "deny"

[workspace.dependencies]
arrayvec = "0.7.6"
bitflags = "2.11.0"
bytes = "1.11.1"
clap = "4.5.60"
criterion = "0.8.2"
darling = "0.23.0"
encoding_rs = "0.8.35"
fixedbitset = "0.5.7"
from_variants = "1.0.2"
futures = "0.3.32"
glam = "0.32.0"
indexmap = "2.13.0"
itertools = "0.14.0"
proc-macro2 = "1"
quote = "1"
serde = "1.0.228"
smallvec = "1.15.1"
syn = "2"
thiserror = "2.0.18"
tokio = "1.49.0"
tokio-test = "0.4.5"
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
