[workspace]
members = [
  "examples/*",
  "insim",
  "insim_core",
  "insim_extra",
  "insim_lyt",
  "insim_macros",
  "insim_o3",
  "insim_pth",
  "kitcar",
  "outgauge",
  "outsim",
  "xtask/codepage-lut",
  "xtask/insim-o3-schema",
]
exclude = ['examples/*']
# Only check / build main crates by default (check all with `--workspace`)
default-members = ["insim", "insim_core", "insim_macros", "insim_pth", "insim_lyt", "outgauge", "outsim", "insim_extra", "kitcar"]
resolver = "3"

[workspace.package]
authors = ["Karl Southern <karl@theangryangel.co.uk>"]
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/theangryangel/insim.rs"
license = "MIT"
homepage = "https://github.com/theangryangel/insim.rs"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
unused_crate_dependencies = "warn"
unused_results = "deny"
missing_debug_implementations = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

# [workspace.lints.clippy]
# unwrap_used = "deny"

[workspace.dependencies]
arrayvec = "0.7"
bitflags = "2"
bytes = "1"
clap = "4"
criterion = "0.8"
darling = "0.23"
encoding_rs = "0.8"
fixedbitset = "0.5"
from_variants = "1"
futures = "0.3"
glam = "0.33"
indexmap = "2"
itertools = "0.15"
num-traits = "0.2"
proc-macro2 = "1"
quote = "1"
schemars = "1"
serde = "1"
serde_json = "1"
sha2 = "0.11"
digest = "0.11"
toml = "1"
smallvec = "1"
syn = "2"
tabled = "0.21"
thiserror = "2"
parking_lot = "0.12"
tokio = "1"
tokio-test = "0.4"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
