[package]
name = "indexed_slab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Used as the backing store of all the elements.
slab = { version = "0.4" }
# Used for the hashed indexes. Provides a faster (non-cryptographically secure) hash function than the standard library.
rustc-hash = { version = "1.1"}
indexed_slab_derive = { path = "indexed_slab_derive" }
