[package]
name = "insim"
description = "LiveForSpeed Insim implementation that focuses on ergonomics and strong typing"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
bench = false
doctest = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs"]

[features]
default = ["tokio", "blocking", "relay"]
relay = []
blocking = []
tokio = [
  "dep:tokio",
]
serde = [
  "dep:serde",
  "insim_core/serde",
  "bitflags/serde",
  "indexmap/serde",
]
tokio-websocket = [
  "relay",
  "tokio",
  "dep:tokio-tungstenite",
  "futures-util"
]
blocking-websocket = [
  "relay",
  "dep:tungstenite",
]

[dependencies]
bitflags = { workspace = true }
bytes = { workspace = true }
from_variants = { workspace = true }
futures-util = { workspace = true, optional = true }
indexmap = { workspace = true }
insim_core = { path = "../insim_core", version = "3.0.0-unreleased" }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "net", "macros", "sync", "tracing", "io-util"], optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tungstenite = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
