[package]
name = "insim"
description = "LiveForSpeed Insim implementation that focuses on ergonomics and strong typing"
version = "4.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
bench = false
doctest = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs"]

[features]
default = ["tokio", "blocking"]
blocking = []
tokio = [
  "dep:tokio",
]
serde = [
  "dep:serde",
  "insim_core/serde",
  "bitflags/serde",
  "indexmap/serde",
  "glam/serde",
]
python = ["dep:pyo3"]

[dependencies]
bitflags = { workspace = true }
bytes = { workspace = true }
from_variants = { workspace = true }
glam = { workspace = true }
indexmap = { workspace = true }
insim_core = { path = "../insim_core", version = "3.0.0" }
pyo3 = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "net", "macros", "sync", "tracing", "io-util"], optional = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
