[package]
name = "insim_core"
version.workspace = true
edition.workspace = true
description = """
Core types and traits for the insim crate.
"""
repository.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs"]

[lib]
bench = false
doctest = false

[dependencies]
bitflags = { workspace = true }
bytes = { workspace = true }
encoding_rs = { workspace = true }
glam = { workspace = true }
if_chain = { workspace = true }
insim_macros = { path = "../insim_macros", version = "3.0.0-unreleased" }
itertools = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }
