[package]
name = "insim_core"
version = "4.0.0"
edition.workspace = true
description = """
Core types and traits for the insim crate.
"""
repository.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs"]

[lib]
bench = false
doctest = false

[features]
default = []
serde = [
  "dep:serde",
  "bitflags/serde",
  "glam/serde",
]

[dependencies]
bitflags = { workspace = true }
bytes = { workspace = true }
encoding_rs = { workspace = true }
from_variants = { workspace = true }
glam = { workspace = true }
if_chain = { workspace = true }
insim_macros = { path = "../insim_macros", version = "0.2.0" }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }
