[package]
name = "insim_core"
version = "4.0.0"
edition.workspace = true
description = """
Core types and traits for the insim crate.
"""
repository.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs"]

[lib]
doctest = false

[features]
default = []
serde = [
  "dep:serde",
  "bitflags/serde",
  "glam?/serde",
  "bytes/serde",
]
glam = [
  "dep:glam"
]

[dependencies]
arrayvec = { workspace = true }
bitflags = { workspace = true }
bytes = { workspace = true }
encoding_rs = { workspace = true }
glam = { workspace = true, optional = true }
insim_macros = { path = "../insim_macros", version = "0.2.0" }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
smallvec = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "codepages"
harness = false
