[package]
name = "insim_extras"
version = "0.1.0-unreleased"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
fixedbitset = { workspace = true }
insim = { path = "../insim", version = "5.0.0", features = ["tokio", "serde"] }
insim_extras_macros = { path = "../insim_extras_macros", version = "0.1.0-unreleased" }
taffy = "0.10.1"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
