[package]
name = "insim_lua"
version = "0.1.0"
edition = "2021"

[dependencies]
insim = { path = "../insim" }
mlua = { version = "0.7.4", features = ["lua54", "vendored"] }
clap = { version = "3.1.8", features = ["derive"] }
tokio = { version = "1.11.0", features = ["full", "tracing"] }
convert_case = "0.5.0"
