[package]
name = "insim_lua"
version = "0.1.0"
edition = "2021"

[dependencies]
insim = { path = "../insim", features = ["serde", "client"] }
mlua = { version = "0.7.4", features = ["lua54", "vendored", "serialize", "send"] }
clap = { version = "3.1.8", features = ["derive"] }
tokio = { version = "1.11.0", features = ["full", "tracing"] }
convert_case = "0.5.0"
serde = "1.0.136"
knuffel = "2.0.0"
miette = { version="4.3.0", features=["fancy"] }
futures = "0.3"
