[package]
name = "insim_lua"
version = "0.1.0"
edition = "2021"

[dependencies]
insim = { path = "../insim", features = ["serde", "client"] }
mlua = { git = "https://github.com/khvzak/mlua", tag = "v0.8.0-beta.5", features = ["luau", "vendored", "serialize", "send"] }
clap = { version = "3.1.8", features = ["derive"] }
tokio = { version = "1.11.0", features = ["full", "tracing"] }
convert_case = "0.5.0"
serde = "1.0.136"
knuffel = "2.0.0"
miette = { version="4.7.1", features=["fancy"] }
futures = "0.3"
pin-project = "1.0"
tracing-subscriber = "0.2"
tracing = "0.1.34"

# axum-live-view = { git = "https://github.com/davidpdrsn/axum-live-view", features = ["precompiled-js"] }
# axum = "0.5"
# tower = "0.4"
