[package]
name = "insim_macros"
description = """
Proc macros for insim_core
"""
version = "0.2.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs"]

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
darling = { workspace = true }
proc-macro2 = { workspace = true }

[lints]
workspace = true
