[package]
name = "insim_o3"
version = "0.1.0+unreleased"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
name = "_insim"
crate-type = ["cdylib"]

[dependencies]
insim = { path = "../insim", features = ["serde", "tokio"] }
pyo3 = { version = "0.28.3", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pyo3-log = "0.13.3"
serde_json = "1.0.149"
tokio = { workspace = true, features = ["rt-multi-thread", "time", "sync"] }

[lints]
workspace = true
