[package]
name = "insim_pth"
version = "1.0.0"
edition = "2021"
description = "Insim PTH file implementation"
rust-version = "1.66"
license = "MIT"
homepage = "https://github.com/theangryangel/insim.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false
doctest = false

[dependencies]
insim_core = { path = "../insim_core", version = "1.0.0-alpha.1" }
thiserror = "1"
