[package]
name = "insim_pth"
version.workspace = true
edition.workspace = true
description = "Insim PTH file implementation"
rust-version.workspace = true
license.workspace = true
homepage.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false
doctest = false

[dependencies]
insim_core = { path = "../insim_core", version = "3.0.0-unreleased" }
insim_macros = { path = "../insim_macros", version = "3.0.0-unreleased" }
thiserror = { workspace = true }
bytes = { workspace = true }
