[package]
name = "insim_pth"
version.workspace = true
edition.workspace = true
description = "Insim PTH file implementation"
rust-version.workspace = true
license.workspace = true
homepage.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs"]

[dependencies]
bytes = { workspace = true }
insim_core = { path = "../insim_core", version = "3.0.0-unreleased" }
thiserror = { workspace = true }
