[package]
name = "insim_relay_tui"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
insim = { path = "../insim" }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tui = { version = "0.16.0", features = ["crossterm"], default-features = false }
crossterm = { version = "0.22.1", features = ["event-stream"] }
bounded-vec-deque = "0.1"
chrono = "0.4"
itertools = "0.10"
