[package]
name = "insim_smx"
version.workspace = true
edition.workspace = true
description = "Insim SMX file implementation"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false
doctest = false

[dependencies]
bytes = { workspace = true }
insim_core = { path = "../insim_core", version = "3.0.0-unreleased" }
thiserror = { workspace = true }
