[package]
name = "kitcar"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
fixedbitset = { workspace = true }
if_chain = { workspace = true }
insim = { path = "../insim", version = "4.0.0", features = ["tokio"] }
taffy = "0.9.1"
tokio = { workspace = true, features = ["rt"] }

[lints]
workspace = true
