[package]
name = "kitcar"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
fixedbitset = { workspace = true }
if_chain = { workspace = true }
indexmap = { workspace = true }
insim = { path = "../insim", version = "5.0.0", features = ["tokio", "serde"] }
kitcar_macros = { path = "../kitcar_macros", version = "*" }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
taffy = "0.9.2"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }

[dev-dependencies]
serde_norway = { workspace = true }

[lints]
workspace = true
