[package]
name = "kitcar_macros"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[lints]
workspace = true
