[package]
name = "outsim"
description = "LiveForSpeed Outsim implementation that focuses on ergonomics and strong typing"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
bench = false
doctest = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs"]

[features]
default = []
serde = [
  "dep:serde",
  "insim_core/serde",
]

[dependencies]
bytes = { workspace = true }
insim_core = { path = "../insim_core", version = "3.0.0-unreleased" }
serde = { workspace = true, features = ["derive"], optional = true }
