[package]
name = "outsim"
description = "LiveForSpeed Outsim implementation that focuses on ergonomics and strong typing"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
bench = false
doctest = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs"]

[features]
default = []
glam = [
  "insim_core/glam",
]
serde = [
  "dep:serde",
  "bitflags/serde",
  "insim_core/serde",
]

[dependencies]
bitflags = { workspace = true }
bytes = { workspace = true }
insim_core = { path = "../insim_core", version = "4.0.0" }
serde = { workspace = true, features = ["derive"], optional = true }
