[package]
name = "patina"
version = "0.1.0"
edition = "2021"

[dependencies]
insim = { path = "../insim", features = ["serde", "client"] }
indexed_slab = { path = "../indexed_slab" }
clap = { version = "3.1.8", features = ["derive"] }
tokio = { version = "1.11.0", features = ["full", "tracing"] }
convert_case = "0.5.0"
serde = "1.0.136"
knuffel = "2.0.0"
miette = { version="4.7.1", features = ["fancy"] }
futures = "0.3"
pin-project = "1.0"
tracing-subscriber = "0.2"
tracing = "0.1.34"
chrono = { version = "0.4", features = ["serde"]}
bounded-vec-deque = "0.1.1"
parking_lot = "0.12"

axum = { version = "0.5", features = ["ws"] }
tower = "0.4"
minijinja = { version = "0.23.0", features = ["source"] }
async-stream = "0.3.3"
md-5 = "0.10.5"
