[package]
name = "pth2svg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insim = { path = "../insim" }
clap = { version = "3.1.8", features = ["derive"] }
svg = "0.10.0"
miette = { "version" = "5.3.0", features = ["fancy"]}
