[package]
name = "pth2triangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insim_core = { path = "../insim_core", features = ["serde"] }
insim_pth = { path = "../insim_pth" }
clap = { version = "4.1.13", features = ["derive"] }
miette = { version="5.5.0", features = ["fancy"] }
serde_json = "1"
serde = "1"
itertools = "0.10.5"
