[package]
name = "pyinsim"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
name = "_insim"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
pyo3-log = "0.13.3"
insim = { path = "../insim", features = ["serde", "tokio"] }
serde_json = "1"
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }


[lints]
workspace = true
