[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "insim-rs"
version = "0.1.0"
requires-python = ">=3.12"
description = "Python bindings for the insim.rs InSim library"
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    # Required for codegen — see README.md for the full workflow.
    "datamodel-code-generator>=0.25",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
]

[tool.maturin]
module-name = "insim_rs._insim"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"
