[package]
name = "race_directord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insim = { path = "../insim", features = ['serde'] }
tokio = { version = "1.11.0", features = ["full"] }
clap = { version = "4.2", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-error = "0.2.0"
color-eyre = "0.6.2"
toml = "0.8.1"
serde = "1.0.188"
axum = "0.7.2"
async-stream = "*"
futures = "*"
if_chain = "1.0.2"
